// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render and have errors 1`] = `
<div
  className="checkbox checkbox--error"
>
  <input
    checked={true}
    id="LABEL"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="LABEL"
  >
    LABEL
     
  </label>
  <div
    className="checkbox__errors"
  >
    1, 2
  </div>
</div>
`;

exports[`Checkbox should render and have no errors 1`] = `
<div
  className="checkbox"
>
  <input
    checked={false}
    id="LABEL"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="LABEL"
  >
    LABEL
     
  </label>
</div>
`;
